[metadata]
name = tinyBT
version = attr: tinyBT._version.__version__
author = "Fred Stober, Dan Maltbie (packaging and extensions)"
author_email = dmaltbie@daloma.org
description = A Simple BitTorrent DHT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/tinyBT
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = tinyBT
python_requires = >=3.8
install_requires =
    requests
    importlib
    docopt

[options.packages.find]
